[metadata]
name = volttron-client
description = "VOLTTRON client library to connect to volttron servers"
description_file = README.md
description_content_type = text/markdown
author = The VOLTTRON Team
author_email = volttron@pnnl.gov
license = Apache 2
keywords = volttron, zmq, utilities
project_urls =
  Bug Reports = https://github.com/VOLTTRON/volttron-utils/issues
  Source = https://github.com/VOLTTRON/volttron-utils/

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers=
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha
    # Indicate who your project is intended for
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Home Automation
    Topic :: Software Development :: Embedded Systems
    # Pick your license as you wish
    License :: OSI Approved :: Apache Software License
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    # These classifiers are *not* checked by 'pip install'. See instead
    # 'python_requires' below.
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
  volttron

[entry_points]
console_scripts =
    vctl = volttron.commands.control:main
    volttron-ctl = volttron.commands.control:main